<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@drawable/bk">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out of this World!"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="italic"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/circler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/searched_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-thin"
        tools:text="Planets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/searched_text"/>

    <ImageView
        android:id="@+id/menu_selector"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="@drawable/search_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hmm... No results"
        android:textSize="24sp"
        android:textColor="#cccccc"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search"
        android:textColor="#cccccc"
        android:textSize="24sp"
        android:textColorHint="#bbcccccc"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>