<resources>
    <string name="app_name">Out Of This World!</string>
    <string name="in_general">In General</string>
    <string name="custom_search">Custom Search</string>
</resources>
